--- a/style.css
+++ b/style.css
@@ -1,31 +1,141 @@
+
 body{
-    background-color: rgb(180, 243, 183);
-    padding-left: 25%;
-    padding-right: 25%;
-    padding-bottom: 10%;
-    padding-top: 5%;
-}
-
-img{
-    border-radius: 100%;
-    height: 200px;
-}
-
-hr{
-    border-color: rgb(169, 170, 159);
-    border-style: none;
-    border-top-style: dotted;
-    border-width: 10px;
-    width: 10%;
-}
-
-h1,h3{
-    color: #297e7e;
-}
-.td{
+    margin: 0;
     text-align: center;
+    font-family: 'Merriweather', serif;
+    background-color: rgb(179, 240, 219);
+    width: auto;
+    font-size: 1rem;
 }
 
-h2{
-    color: rgb(57, 73, 119);
+h1{
+    margin: 50px auto 0 auto;
+    font-size: 90px;
+    font-family: 'Caveat', cursive;
+    color: rgb(6, 209, 209);
 }
+h3{
+    width: 30%;
+    margin: auto;
+    color: rgb(14, 230, 238);
+}
+h2{
+    font-size: 40px; 
+    color: rgb(63, 211, 211);
+}
+
+p{
+    width: 39%;
+    margin: 10px auto 40px;
+    color: rgb(96, 99, 99);
+    padding: 30px auto 100px;
+}
+hr{
+    border: 10px dotted;
+    color: rgb(168, 168, 173);
+    width: 10%;
+    border-bottom: none;
+    margin: 100px auto 100px;
+}
+a{
+    padding: 0 30px;
+    text-decoration: none;
+    font-weight: bold;
+}
+a:hover{
+    color: rgb(211, 241, 239);
+}
+img{
+    width: 40%;
+}
+
+.top-container{
+    background-color: rgb(179, 240, 219);
+    position: relative;
+    padding-top: 100px;
+    width: auto;
+}
+
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+
+}
+.top-cloud{
+    position: absolute;
+    right: 400px;
+    top: 100px;
+    width: auto;
+
+}
+.bottom-cloud{
+  position: absolute;
+  left: 400px;
+  bottom: 300px;
+  width: auto;
+}
+.profile{
+    padding-top: 150px;
+}
+.chilli{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+    border-radius: 20%;
+}
+.comp{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+    border-radius: 20%;
+}
+
+
+.pic{
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+}
+.bottom-container{
+    background-color: rgb(11, 182, 182);
+    height: 80px;
+    padding: 30px 0 0;
+}
+.last{
+    font-size: 0.7rem;
+    padding: 10px 0 0;
+    color: rgb(226, 217, 217);
+}
+
+.btn {
+    background: #1e9be8;
+    background-image: -webkit-linear-gradient(top, #1e9be8, #1099e8);
+    background-image: -moz-linear-gradient(top, #1e9be8, #1099e8);
+    background-image: -ms-linear-gradient(top, #1e9be8, #1099e8);
+    background-image: -o-linear-gradient(top, #1e9be8, #1099e8);
+    background-image: linear-gradient(to bottom, #1e9be8, #1099e8);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #195675;
+    background-image: -webkit-linear-gradient(top, #195675, #255b85);
+    background-image: -moz-linear-gradient(top, #195675, #255b85);
+    background-image: -ms-linear-gradient(top, #195675, #255b85);
+    background-image: -o-linear-gradient(top, #195675, #255b85);
+    background-image: linear-gradient(to bottom, #195675, #255b85);
+    text-decoration: none;
+  }
+  .contact-me{
+    margin-bottom: 100px
+  }
